better but still have problem